# awfulclaw

./: .gitignore  CLAUDE.md  DESIGN.md  PHILOSOPHY.md  README.md  concerns.md  pyproject.toml
agent/: __main__.py  agent.py  backend_manager.py  bus.py  claude_client.py  config.py  context.py  cron.py  email_triage.py  llm_client.py  main.py  ollama_client.py  parakeet_transcriber.py  pipeline.py  scheduler.py  store.py  transcriber.py
agent_config/: USER.md
awfulclaw/: __main__.py  claude.py  config.py  connector.py  context.py  db.py  gateway.py  imap.py  imessage.py  loop.py  memory.py  scheduler.py  skills.py  telegram.py  web.py
config/: README.md  mcp_servers.json
docs/: ARCHITECTURE.md  DESIGN.md  PHILOSOPHY.md  REIMPLEMENTATION_PLAN.md  RUNBOOK.md  gcal.md
launchd/: ai.awfulclaw.agent.plist  ai.awfulclaw.logrotate.plist  ai.awfulclaw.web.plist
profile/: CHECKIN.md  PERSONALITY.md  PROTOCOLS.md  README.md
scripts/: ai.awfulclaw.agent.plist  ai.awfulclaw.watcher.plist  import_conversations.py  import_memory.py  import_schedules.py  install-service.sh  install_service.sh  migrate_facts_people_to_obsidian.py  migrate_primary_channel.py  progress.txt  ralph.sh  reload-on-main.sh  restart-service.sh  restart.sh  sandbox.sb  setup.py  smoke_test.py  start_agent.sh  start_web.sh  uninstall-service.sh  uninstall_service.sh
state/: README.md
tests/: test_agent.py  test_agent_integration.py  test_backend_manager.py  test_bus.py  test_checkin_handler.py  test_claude.py  test_claude_client.py  test_config.py  test_connectors_base.py  test_connectors_rest.py  test_connectors_telegram.py  test_context.py  test_cron.py  test_email_triage.py  (+52 more)
(+167 files in other folders)
