[project]
name = "awfulclaw"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "mcp>=1.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "sentence-transformers>=5.3.0",
    "sqlite-vec>=0.1.9",
    "croniter>=3.0",
    "pyobjc-framework-EventKit>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Contacts>=10.0; sys_platform == 'darwin'",
    "timezonefinder>=6.0",
    "aioimaplib>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
